# EAST

./: README.md
fake_mail_server/: .gitignore  Cargo.toml  README.md  config.ron  deny.toml
fake_mail_server/certs/: example.org.p12  rootCA.pem
fake_mail_server/mails/: mail_2.eml
fake_mail_server/scripts/android/: monkey_swipe.py  reset.expect  reset.sh
fake_mail_server/scripts/macos/: macos.py  request.applescript  reset.sh
fake_mail_server/scripts/nixos/: reset.sh
fake_mail_server/scripts/samsung/: monkey_swipe.py  reset.sh  setup.py
fake_mail_server/src/: config.rs  error.rs  filter.rs  lib.rs  log.rs  main.rs  predictor.rs  utils.rs
fake_mail_server/src/imap/: account.rs  config.rs  mod.rs  responses.rs
fake_mail_server/src/pop3/: config.rs  mod.rs
fake_mail_server/src/smtp/: config.rs  mod.rs
fake_mail_server/testcases/imap/: setup.ron  setup_compression.ron
fake_mail_server/testcases/imap/Buffering/: B_1.ron  B_2.ron  B_3.ron
fake_mail_server/testcases/imap/Negotiation/: D_1.ron  D_2.ron  D_3.ron  L_1_A.ron  L_1_B.ron  M_1_A.ron  M_1_B.ron  M_2_A.ron  O_1.ron  O_2.ron  O_3.ron  O_4.ron  P.ron  P_1.ron  P_2.ron  P_3.ron  P_4.ron  P_5.ron
fake_mail_server/testcases/imap/others/: X_1.ron  imapsieve_1.ron  untagged_capability_after_greeting.ron  untagged_capability_before_starttls.ron  utf8_only_1.ron  utf8_only_2.ron
fake_mail_server/testcases/pop3/: setup.ron
fake_mail_server/testcases/smtp/: setup.ron
fake_mail_server/testcases_extra/: README.md
fake_mail_server/tests/: create.rs  create_configs.rs
scanning_scripts/: README.md
(+176 files in other folders)
