[package]
name = "fake_mail_server"
version = "0.1.0"
authors = ["Damian Poddebniak <poddebniak@fh-muenster.de>"]
edition = "2018"
default-run = "fake_mail_server"
license = "MIT OR Apache-2.0"

[dependencies]
ansi_term          = "*"
anyhow             = "*"
async-compression  = { version = "*", features = ["tokio", "deflate"] }
base64             = "*"
bytes              = "*"
itertools          = "*"
nom                = "*"
mailparse          = "*"
rand               = "*"
structopt          = "*"

ron                = "*"
serde              = "*"

tracing            = "*"
tracing-appender   = "*"
tracing-subscriber = { version = "*", features=["json"] }

async-trait        = "*"
pin-project        = "*"
tokio              = { version = "*", features=["rt-multi-thread", "io-util", "net", "time", "macros"] }
tokio-native-tls   = "*"

smtp-codec = { git = "https://github.com/duesee/smtp-codec", features = ["serdex"], branch = "main" }
pop3-codec = { git = "https://github.com/duesee/pop3-codec", features = ["serdex"], branch = "main" }
imap-codec = { git = "https://github.com/duesee/imap-codec", features = ["serdex"], branch = "main" }
